# ctb-web

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.azusa  README.md  build_wasm.sh  manager.py  wasm-bindgen-macroquad.sh
api/: Cargo.toml
api/src/: db.rs  main.rs  routes.rs
api/src/routes/: get_me.rs  get_user_by_id.rs  login.rs  mod.rs  register.rs
azusa/: Cargo.toml
azusa/src/: app.rs  client.rs  main.rs
client/: Cargo.toml
client/src/: cache.rs  convert.rs  leaderboard.rs  lib.rs  main.rs
client/src/queries/: initialize_cache.sql  initialize_chart.sql  local_leaderboard.sql
client/src/screen/: game.rs  gameplay.rs  mod.rs  result.rs  select.rs  setup.rs
client/src/screen/overlay/: login.rs  mod.rs  settings.rs
client/src/ui/: expandablelist.rs  menubutton.rs  menubuttonlist.rs  mod.rs
client/src/web_socket/: native.rs
ctb/: .gitignore  Cargo.toml
ctb/src/: azusa.rs  cache.rs  chart.rs  chat.rs  config.rs  convert.rs  frozen.rs  leaderboard.rs  lib.rs  log.rs  main.rs  math.rs  promise.rs  score.rs
ctb/src/queries/: initialize.sql
ctb/src/rulesets/: catch.rs  mod.rs
ctb/src/screen/: game.rs  gameplay.rs  mod.rs  result.rs  select.rs  setup.rs  visualizer.rs
ctb/src/screen/overlay/: chat.rs  login.rs  mod.rs  mods.rs  settings.rs
ctb/src/ui/: menubutton.rs  menubuttonlist.rs  mod.rs
ctb/src/web_request/: mod.rs  native.rs  web.rs
ctb/src/web_socket/: mod.rs  native.rs  web.rs
importer/: Cargo.toml
importer/src/: main.rs
src/: azusa.rs  cache.rs  chart.rs  config.rs  leaderboard.rs  lib.rs  main.rs  promise.rs  score.rs  score_recorder.rs  web_socket.rs
src/queries/: initialize.sql  insert_leaderboard.sql
src/screen/: game.rs  gameplay.rs  mod.rs  result.rs  select.rs  setup.rs
src/screen/overlay/: mod.rs
src/ui/: menubutton.rs  menubuttonlist.rs  mod.rs
src/web_socket/: native.rs
website/: .eslintrc  .gitignore  Cargo.toml  app.vue  build.rs  global.css  index.html  nuxt.config.ts  package.json
website/assets/: general.sass
website/components/: AvatarMenu.vue  Header.vue  LoginForm.vue  Notification.vue  RegistrationForm.vue
website/composables/: useToken.ts  withApi.ts
website/composables/apis/: broken.ts  dummy.ts  real.ts
website/layouts/: default.vue
website/pages/: index.vue  play.vue  registration.vue
website/plugins/: api.ts  authentication.ts  directive.ts  globalStates.ts  notifications.ts
website/src/: main.rs
