[package]
name = "ctb-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.3.13", default-features = false }
osu-types = { path = "../osu-rs/osu-types" }
osu-parser = { path = "../osu-rs/osu-parser" }
osu-utils = { path = "../osu-rs/osu-utils" }
kira = { version = "0.5.3", default-features = false, features = ['wav'] }
num-format = "0.4.0"
async-trait = "0.1.52"
flume = "0.10.10"
ringbuffer = "0.8.2"