[package]
name = "ctb-web"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.3.13", default-features = false }
osu-types = { path = "../osu-rs/osu-types" }
osu-parser = { path = "../osu-rs/osu-parser" }
osu-utils = { path = "../osu-rs/osu-utils" }
kira = { version = "0.5.3", default-features = false, features = ['wav'] }
num-format = "0.4.0"
async-trait = "0.1.52"
flume = "0.10.10"
ringbuffer = "0.8.2"
serde = "1.0.89"
serde_json = "1.0.78"
parking_lot = "0.12.0"
slotmap = "1.0.6"

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3.56", default-features = false, features = ['Storage'] }

[profile.dev]
opt-level = 1
debug = true
