[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
env_logger = "0.9.0"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rust-argon2 = "1.0.0"