[package]
name = "azusa"
version = "0.1.0"
edition = "2021"

[dependencies]
ctb = { path = "../ctb" }
bincode = "1.3.3"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "0.17.1"
futures = "0.3.21"
flume = "0.10.11"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde"] }