[package]
name = "ctb"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.3.16", default-features = false }
osu-types = { path = "../../osu-rs/osu-types" }
osu-parser = { path = "../../osu-rs/osu-parser" }
osu-utils = { path = "../../osu-rs/osu-utils" }
kira = { version = "0.6.0", default-features = false, features = ['cpal', 'wav'] }
num-format = "0.4.0"
async-trait = "0.1.52"
flume = "0.10.10"
ringbuffer = "0.8.2"
serde = "1.0.89"
serde_json = "1.0.78"
slotmap = "1.0.6"
bincode = "1.3.3"
mint = "0.5.9"
thiserror = "1.0.30"
uuid = { version = "0.8.2", default-features = false, features = ["serde"] }
egui-macroquad = "0.11.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
rmp-serde = "1.1.0"
time = { version = "0.3.9", features = ["formatting"] }
quad-net = "0.1.1"
aether-log = { path = "../../aether-log" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gluesql = { version = "0.10.2", default-features = false, features = ["sled-storage"] }
qws = "0.7.9"
instant = "0.1.12"
ureq = { version = "2.4.0", features = ["json"] }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.56", default-features = false, features = [
    "Storage",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]}
sapp-jsutils = "0.1.5"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
js-sys = "0.3.56"
parking_lot = "0.12.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"]}
